[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Xor.png" type="Texture" id=1]
[ext_resource path="res://Components/ComponentsScripts/PortXor.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Components/ComponentsScripts/PortXor1.gd" type="Script" id=4]
[ext_resource path="res://Components/ComponentsScripts/PortXor2.gd" type="Script" id=5]
[ext_resource path="res://Fonts/FixedFont.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.5, 24 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.25, 11.5 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 6 )

[node name="PortXor" type="Area2D" groups=["PortAnd"]]
position = Vector2( 400, 456 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="."]
antialiased = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 41.5, -1 )
shape = SubResource( 4 )

[node name="Plug" type="Area2D" parent="."]
position = Vector2( 88, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Plug"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plug"]
shape = SubResource( 5 )

[node name="PortXor1" type="StaticBody2D" parent="." groups=["PortXor"]]
position = Vector2( 0, -16 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortXor1"]
position = Vector2( -3, -8 )
shape = SubResource( 2 )

[node name="PortXor2" type="StaticBody2D" parent="." groups=["PortXor"]]
position = Vector2( 0, 17 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortXor2"]
position = Vector2( -2.75, 6.5 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 72.0
margin_top = -24.0
margin_right = 88.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
align = 1

[node name="XOR" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 32.0
margin_right = 58.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )
text = "XOR"
align = 1

[connection signal="body_entered" from="." to="." method="_on_PortXor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PortXor_body_exited"]
[connection signal="input_event" from="." to="." method="_on_PortAnd_input_event"]
[connection signal="body_entered" from="Plug" to="." method="_on_Plug_body_entered"]
[connection signal="body_exited" from="Plug" to="." method="_on_Plug_body_exited"]
[connection signal="input_event" from="Plug" to="." method="_on_Plug_input_event"]
